# emloan

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
emloan/: __init__.py  etf_montecarlo.py  start_immo.py
emloan/immo/: __init__.py  cap_dev.py  cash_flow.py  costs.py  immo.py
emloan/loan/: __init__.py  compound.py  credit.py  mortgage.py
eploan/: __init__.py
eploan/loan/: mortgage.py
tests/: test_immo_calculators.py  test_immo_cash_flow.py  test_immo_costs.py  test_loan_compound.py  test_loan_credit.py  test_loan_mortgage.py
