[build-system]
requires = [
    "setuptools>=69",
    "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "emloan"
dynamic = ["version"]

authors = [
    { name = "Emanuel Pegler", email = "emanuel@pegler.eu" }
]

description = "A description of your project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "plotly[kaleido]",
    "scipy"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
write_to = "emloan/_version.py"